Fix: Lets the primary be same for light/dark mode

--- a/src/assets/css/input.css
+++ b/src/assets/css/input.css
@@ -40,7 +40,6 @@
           --color-neutral-weak: hsl(240deg 12% 21%);
           --color-neutral-medium: hsl(240deg 6% 56%);
           --color-neutral-strong: hsl(240deg 3% 97%);
-          --color-primary: hsl(347deg 68% 50%);
         }
     }
 
